--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>外卖点餐网站演示</title>
-      <link rel="stylesheet" href="https://cdn.staticfile.org/ant-design-vue/3.2.20/antd.min.css">
-      <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js" ></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/ant-design-vue/3.2.20/antd.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ant-design-vue@3.2.20/dist/reset.css">
+    <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js" ></script>
   </head>
 
   <body>
